# MigrationFingerprint

./: .gitattributes  .gitignore  CLAUDE.md  CLAUDE_1.md  CLI_SPEC.md  MAPTIVA_Fingerprint_Solution_Specification_v1.0.docx  MAPTIVA_Fingerprint_Spec_Outline.md  MAPTIVA_Solution_Architecture_and_Design_Specification_Blueprint.docx  MaptivaFingerprintSolutionDoc.docx  MigrationFingerprint.html  README.md  Retirement_Recordkeeping_Conversion_Application_Reference_Guide.docx  Retirement_Recordkeeping_Conversion_Issues_and_Resolutions.docx  index.html  omni-restore-workflow.html  pyproject.toml  start-dashboard.ps1
.claude/: settings.json  settings.local.json
docs/: Omni_Format_Matrix_Complete.xlsx  Omni_to_Omni_Restore_Strategy.md  openapi.json  runbook.html
src/: cli.py
tests/: conftest.py  test_ai.py  test_api.py  test_appendix_d_payloads.py  test_cli.py  test_cli_learning.py  test_cli_run.py  test_ingest_csv.py  test_ingest_fixedwidth.py  test_json_schema_export.py  test_learning.py  test_loader.py  test_matrix_compiler.py  test_ms17_coverage.py  test_prioritization.py  test_registration.py  test_report_html.py  test_restore_use_case.py  test_rules_count_balance.py  test_rules_derived_recompute.py  test_rules_encoding_sort.py  test_rules_engine.py  test_rules_field_compare.py  test_rules_format_conformance.py  test_rules_referential.py  test_runbook.py  test_runner.py  test_sample_data.py  test_second_fingerprint.py  test_seed_fingerprint.py  test_signoff.py  test_ui.py  test_validation_errors.py  test_workflow.py
tools/: __init__.py  build_runbook.py
(+221 files in other folders)
