[project]
name = "fingerprint-poc"
version = "0.1.0"
description = "MAPTIVA Migration Fingerprint POC — targeted plan-conversion validation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
