[project]
name = "fingerprint-poc"
version = "0.1.0"
description = "MAPTIVA Migration Fingerprint POC — targeted plan-conversion validation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pandas>=2.2",
    "jinja2>=3.1",
]

[project.scripts]
fingerprint = "src.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
